# oysters

./: CMakeLists.txt
db/: Dockerfile
docker/: Dockerfile
inc/: http.hpp  uniimage.hpp
mongodb/: CMakeLists.txt
mongodb/inc/: mongodbc.h
mongodb/src/: mongodbc.cc
schema/: json_schema.txt
src/: http.cc  uniimage.cc
ui/Oysters/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ui/Oysters/src/: index.html
ui/Oysters/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
ui/Oysters/src/app/core/: common.ts  events.service.ts  http.service.ts
ui/Oysters/src/app/pages/account/create-account/: create-account.component.html  create-account.component.ts
ui/Oysters/src/app/pages/account/list-account/: list-account.component.html  list-account.component.ts
ui/Oysters/src/app/pages/account/update-account/: update-account.component.html  update-account.component.scss  update-account.component.ts
ui/Oysters/src/app/pages/account/vnavbar-account/: vnavbar-account.component.html  vnavbar-account.component.spec.ts  vnavbar-account.component.ts
ui/Oysters/src/app/pages/grivance/gvnabbar/: gvnabbar.component.html  gvnabbar.component.spec.ts  gvnabbar.component.ts
ui/Oysters/src/app/pages/login/: login.component.html  login.component.scss  login.component.ts
ui/Oysters/src/app/pages/main/: main.component.html  main.component.ts
ui/Oysters/src/app/pages/pta-main/: pta-main.component.html  pta-main.component.spec.ts  pta-main.component.ts
yaml/: compose.yml  services.yml
(+15 files in other folders)
